howard12 rmc-perryman

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -269,7 +269,7 @@ Local maximum at $1\mjupiter{}$, flat distro in log(r) between $4-10\mearth{}$ b
 \begin{figure}[!ht]
 \includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}
 \end{figure}
-
+howard2012planet
 
 \begin{workout}[transit distro observed refs]
 Refs:Mthods of detecting exoplanets (radius distro: pg 136)
@@ -322,6 +322,9 @@ Fig 6.33/34/35: mass radius realtion
 
 pg 144: theoretical model - La posizione di un pianeta nel diagramma M-R fornisce indicazione della composizione
 fig 6.35
+
+\begin{wrapfigure}[10]{r}{0.4\textwidth} \includegraphics[trim={0cm 0 0 0},clip, width=0.4\textwidth]{MRC}\label{fig:MRC} \caption{Da \cite{perryman2011exoplanet}.} \end{wrapfigure}
+
 \end{workout}
 
 \section{Struttura orbitale e risonanze moto medio}
