ref and transit figs

--- a/seminario.bib
+++ b/seminario.bib
@@ -117,6 +117,17 @@ pages={1282},
   publisher={Springer}
 }
 
+@article{fulton2017california,
+  title={The California-Kepler survey. III. A gap in the radius distribution of small planets},
+  author={Fulton, Benjamin J and Petigura, Erik A and Howard, Andrew W and Isaacson, Howard and Marcy, Geoffrey W and Cargile, Phillip A and Hebb, Leslie and Weiss, Lauren M and Johnson, John Asher and Morton, Timothy D and others},
+  journal={The Astronomical Journal},
+  volume={154},
+  number={3},
+  pages={109},
+  year={2017},
+  publisher={IOP Publishing}
+}
+
 @article{howard2012planet,
   title={Planet occurrence within 0.25 AU of solar-type stars from Kepler},
   author={Howard, Andrew W and Marcy, Geoffrey W and Bryson, Stephen T and Jenkins, Jon M and Rowe, Jason F and Batalha, Natalie M and Borucki, William J and Koch, David G and Dunham, Edward W and Gautier III, Thomas N and others},
@@ -172,6 +183,16 @@ pages={1282},
   author={Mordasini, Christoph},
   journal={arXiv preprint arXiv:1804.01532},
   year={2018}
+}
+
+@article{exoplanet.eu,
+  title={Defining and cataloging exoplanets: the exoplanet. eu database},
+  author={Schneider, Jean and Dedieu, Cyrill and Le Sidaner, Pierre and Savalle, Renaud and Zolotukhin, Ivan},
+  journal={Astronomy \& Astrophysics},
+  volume={532},
+  pages={A79},
+  year={2011},
+  publisher={EDP Sciences}
 }
 
 @article{mayor2011harps,
