--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -271,10 +271,13 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 \end{workout}
 
-\begin{figure}[!ht]
+%\begin{figure}[!ht]
 %\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{freqvsRpl50d}\caption{Da \cite{howard2012planet}}
-\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{Rfreq}\caption{Da \cite{exoplanet.eu}}
-\end{figure}
+%\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{Rfreq}\caption{Da \cite{exoplanet.eu}}
+%\end{figure}
+
+\begin{figure}[!ht] \begin{subfigure}[b]{0.47\textwidth} \centering \includegraphics[trim={0cm 0 0 0},clip, width=0.\textwidth]{RfreqPl100ub} \caption{Da \cite{fulton2017california}}\label{fig:figref} \end{subfigure} ~ \begin{subfigure}[b]{0.\textwidth} \centering \includegraphics[trim={0cm 0 0 0},clip,width=\textwidth]{keplerRfreq}\label{fig:figlabel} \caption{Da \cite{ref}} \end{subfigure} \end{figure} 
+
 
 \begin{workout}[transit distro observed refs]
 Refs:Mthods of detecting exoplanets (radius distro: pg 136)
