correcting until regime accrescimento

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -307,10 +307,25 @@ Local maximum at $1\mjupiter{}$, flat distro in log(r) between $4-10\mearth{}$ b
 \end{workout}
 
 \begin{workout}[planet model: relazione massa-raggio]
+characterization of exoplanets from formation: MR relation pg 18
+formazione: vedi \ref{ch:gasaccretion}
+MR diagram chabrier 09 (perryman 143)
 
 \end{workout}
 
+La posizione di un pianeta nel diagramma massa-raggio \'e determinata dall'equazione di stato, e quindi da densit\'a e composizione. Per un equazione di stato della forma
+\begin{equation}
+P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
+\end{equation}
+si che per $M\approx\mjupiter$ $n\approx1$.
+Inoltre la relazione massa-raggio  \'e approssimabile
+\begin{equation}
+R\propto M\expy{(1-n)/(3-n)}
+\end{equation}•
+Tramite un modello planetarie si ricava la composizione media di un pianeta dalla posizione nel diagramma mass-raggio.
 
+\begin{figure}[!ht] \centering\includegraphics[trim={0cm 14cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MRD}\label{fig:MRD}\caption{Diagramma mass-raggio per pianeti di transito. Le curve tratteggiate sono a densit\'a costante. Il simbolo $\circ$ indica i pianeti del sistema solare. Da \cite{perryman2011exoplanet}.}
+ \end{figure} 
 
 \begin{workout}[KEPLER MULTI-PLANET SYSTEM]
 THE CALIFORNIA-KEPLER SURVEY. V. PEAS IN A POD: PLANETS IN A KEPLER MULTI-PLANET SYSTEM ARE SIMILAR IN SIZE AND REGULARLY SPACED
