--- a/main.tex
+++ b/main.tex
@@ -110,10 +110,9 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
 }
-\begin{workout}[Intro a modelli core accretion]
+
 Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
-L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\u massicci fino a masse di frazioni di masse terrestri  ed infine accrescere gas: lo scenario di core accretion (CA).
-\end{workout}
+L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
 
 \input{CAdesc}
 \cleartorecto
