--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -519,10 +519,10 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Evoluzione struttura planetaria: accrescimento e fase isolata.}\label{chap:gasaccretion}
-}
+\chapter{Evoluzione struttura planetaria: accrescimento.}\label{chap:gasaccretion}
+}% e fase isolata
 
-Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae e si ha un afflusso di massa.
+Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz.
 Il flusso di massa cresce fino a esurire la massa presente nella fascia di pertinenza del protopianeta: in questa seconda fase l'accresscimento di massa \'e regolato da tempo scala viscoso del disco.
 
 Da modelli numerici risulta
@@ -534,19 +534,24 @@ con $q,s\approx0.2-0.3$.
 \section{Accrescimento limitato da velocit\'a di raffreddamento}
 
 La luminosit\'a del pianeta \'e determinata tramite
-\begin{align}
-&E_t=E_g+E_i=\int_0^M\frac{Gm}{r}\,dm+\int_{M_z}^Mu\,dm=-\xi\frac{GM^2}{2R}\\
-&-\TDof{t}E_t=L=L_M+L_R+L_{\xi}=\xi\frac{GM}{R}\dot{M}-\xi\frac{GM^2}{2R^2}\dot{R}+\frac{GM^2}{2R}\dot{\xi}
-\end{align}
-con $\dot{M}=\dot{M}_Z+\dot{M}_{XY}$ dove ho indicato la massa di gas legata al core con
+\begin{equation}
+E_t=E_g+E_i=\int_0^M\frac{Gm}{r}\,dm+\int_{M_z}^Mu\,dm=-\xi\frac{GM^2}{2R}
+\end{equation}
+che sostituita nell'equazione di conservazione dell'energia da:
+\begin{equation}
+-\TDof{t}E_t=L=L_M+L_R+L_{\xi}=\xi\frac{GM}{R}\dot{M}-\xi\frac{GM^2}{2R^2}\dot{R}+\frac{GM^2}{2R}\dot{\xi}
+\end{equation}
+con $\dot{M}=\dot{M}_Z+\dot{M}_{XY}$.
+
+Ho indicato la massa di gas legata al core con
 \begin{equation}
 M_{XY}=4\pi\int_{R_c}^{R_B}\rho(r')r'^2\,dr'
 \end{equation}
-e $R_C$ \'e il raggio del core e inoltro introduco il raggio di Bondi
+e $R_C$ \'e il raggio del core e introduco il raggio di Bondi
 \begin{equation}
 R_B=G\frac{M_c}{c_0^2}\approx\SI{4e10}{\cm}a(AU)\expy{1/2}\frac{M_c}{\mearth{}}
 \end{equation}
-definito come raggio in cui energia termica e potenziale gravitazionale si equivalgono: il core perturba la pressione del gas del disco.
+definito come raggio in cui energia termica e potenziale gravitazionale si equivalgono.%il core perturba la pressione del gas del disco.
 
 La struttura del pianeta \'e detrminata integrando le equazioni di conservazione di massa, momento, energia e l'equazione del trasporto di energia
 Mass conservation, hydrostatic equilibrium and energy transfer:
@@ -557,6 +562,14 @@ Mass conservation, hydrostatic equilibrium and energy transfer:
 &\TDy{r}{T}=\frac{T}{P}\TDy{r}{P}\nabla(T,P)\\
 &\nabla(T,P)=\TDly{P}{T}=\min{(\nad{},\nrad{})}
 \end{align}
+
+
+\begin{workout}[envelope mass as function of core mass]
+Armitage 17 eq 232 (`'lecture nite on formation and early evolution of PS)
+\begin{equation}
+M_{env}\approx\int_{R_c}^{R_o}4\pi r^2\rho\,dr\propto\frac{\sigma}{\kappa_RL}(\frac{\mu m_pGM_t}{4k_b})^4\ln{\frac{R_o}{R_c}}
+\end{equation}
+\end{workout}
 
 Condizioni al bordo:
 \begin{align}
@@ -586,6 +599,19 @@ Se $H_p\approx R_p$ il pianeta perturba in maniera non trascurabile il disco (il
 &T_{int}^4=\frac{3\tau L_{int}}{8\pi\sigma R^2},\ T^4=(1-A)T_{neb}^4+T_{int}^4
 \end{align}
 
+In questa fase la velocit\'a di accrescimento di gas \'e determinata dall'evoluzione viscosa del disco:
+\begin{equation}
+\dot{M}_{e,visc}=f_{hyd}3\pi\nu\Sigma_g
+\end{equation}
+$f_{hyd}\approx0.9$ valore determinato da simulazioni idrodinamiche (\cite{lubow1999disk}).
+
+\begin{workout}[Bondi accretion rate]
+Unperturbed viscous flow
+\begin{equation}
+\dot{M}_{e,B}\approx\frac{\Sigma_g}{H}(\frac{R_H}{3})^3\Omega
+\end{equation}
+\end{workout}
+
 \begin{workout}[Detached phase accretion rate]
 Characterization of exoplanets from their formation pg 8
 \end{workout}
@@ -612,9 +638,7 @@ Refs: Planet formation models: the interplay with the planetesimal disc (Fortier
 Ormel 15/ Cimerman 17
 \end{workout}
 
-\section{Fase isolata}
-fonti energia
-
+%\section{Fase isolata}
 
 \begin{workout}[Fase isolata: fonti energia]
 fonti energia: tidal heating radiogeninc heat, star flux
@@ -625,12 +649,14 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Interazioni pianeta-disco: migrazione planetaria}
 }
 
-\begin{wrapfigure}[10]{lr}{0.5\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.45\textwidth]{corotation}\label{fig:corotation}
+\begin{wrapfigure}[10]{l}{0.3\textwidth}
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.3\textwidth]{corotation}\label{fig:corotation}
 \caption{Da \cite{armitage2007lecture}.}
 \end{wrapfigure}
 
 Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta e integrando sui parametri d'impatto ammissibili, oppure descrivendo in approssimazione lineare l'interazione tra onde di densit\'a e pianeta.
+
+\clearpage
 
 \begin{workout}[Migrazione: situazione complessa]
 Armitage07 pg 57-58
@@ -733,19 +759,17 @@ Considero un disco kepleriano ed espando il potenziale generato da un pianeta, p
 \begin{align}
 &\psi_p(r,\phi,t)=-\frac{Gm_p}{|\vec{r}_p(t)-\vec{r}|}=\sum_{m=0}^{\infty}\psi_m(r)\cos{m[\phi-\phi_p(t)]}
 \end{align}
-Attornoall'orbita del pianeta si hanno orbite risonanti per elementi di fluido del gas. La condizione di risonanza \'e
+Attorno all'orbita del pianeta si hanno orbite risonanti per elementi di fluido del gas. La condizione di risonanza \'e
 \begin{align}
-\pm\kappa_0=m(\Omega-\Omega_p)\\
+&\pm\kappa_0=m(\Omega-\Omega_p)\\
+&r_L=(\frac{m}{m\pm1})\expy{2/3}a
 %\kappa_0^2=\frac{2\Omega}{r}\TDof{r}(r^2\Omega)
 \end{align}
 dove $\kappa_0=\Omega$ per disco Kepleriano \'e frequenza epiciclica.
-Le risonanze di Lindblad si hanno a:
-\begin{equation}
-r_L=(\frac{m}{m\pm1})\expy{2/3}a
-\end{equation}
+
 %%RMM disco pianeta: gli elementi di fluido descrivono m orbite attorno al pianeta il pianeta compie $m\pm1$ orbite
 
-Per tenere conto della pressione introduco l'altezza scala del disco $c_s=H\Omega$, quindi la posizione della risonanza \'e allontanata:
+Per tenere conto della pressione introduco l'altezza scala del disco $c_s=H\Omega$. La posizione della risonanza \'e allontanata:
 \begin{equation}
 m[\Omega(r_L)-\Omega_p]=\mp\Omega(r_L)\sqrt{1+m^2(H/r)^2}
 \end{equation}
@@ -986,7 +1010,8 @@ For each m,n there are 3 resonant locations: external L resonance act to increas
 Risultati analoghi per inclinazione.	
 \end{workout}
 
-\section{Altre interazioni che producono migrazione}
+
+%\section{Altre interazioni che producono migrazione}
 
 
 \begin{workout}[mass loss and conservation of angular momentum]
@@ -1013,9 +1038,11 @@ kley 04
 aligned absidal line: papaloizou 03
 \end{workout}
 
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{N-body interactions inside proto disk}
-}
+
+%{\let\clearpage\relax\let\cleardoublepage\relax
+%\chapter{N-body interactions inside proto disk}
+%}
+
 
 \begin{workout}[Long-term evolution: laplace equations]
 The HARPS search for southern extra-solar planets-XXVIII. Up to seven planets orbiting HD 10180: probing the architecture of low-mass planetary systems
