--- a/seminario.bib
+++ b/seminario.bib
@@ -74,6 +74,17 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{lubow1999disk,
+  title={Disk accretion onto high-mass planets},
+  author={Lubow, SH and Seibert, M and Artymowicz, P},
+  journal={The Astrophysical Journal},
+  volume={526},
+  number={2},
+  pages={1001},
+  year={1999},
+  publisher={IOP Publishing}
+}
+
 @article{baraffe2009physical,
   title={The physical properties of extra-solar planets},
   author={Baraffe, Isabelle and Chabrier, Gilles and Barman, Travis},
@@ -137,6 +148,16 @@ pages={1282},
   pages={15},
   year={2012},
   publisher={IOP Publishing}
+}
+
+@article{goupil2008planet,
+  title={Planet--Disk Interactions},
+  author={Goupil, M-J and Zahn, J-P and Masset, FS},
+  journal={European Astronomical Society Publications Series},
+  volume={29},
+  pages={165--244},
+  year={2008},
+  publisher={EDP Sciences}
 }
 
 @article{masset2007planetary,
