mf and exoplanet.eu

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -844,8 +844,7 @@ Benitez Llambay 15: heating torque, Paardekooper14 Pierens 15: dynamic corotatio
 
 \section{Migrazione tipo II:pianeti massicci.}
 
-Per pianeti massicci il trasporto viscoso di momento angolare non \'e abbastanza efficiente quindi si forma un gap attorno al pianeta.
-Migrazione tipo II: il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
+Per pianeti massicci il trasporto viscoso di momento angolare non \'e abbastanza efficiente quindi si forma un gap attorno al pianeta: questo \'e detta migrazione di tipo II. il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
 
 \subsection{Approssimazione impulsiva}
 
@@ -885,7 +884,7 @@ Per materia in orbita circolare interna/esterna al pianeta il trasferimento \'e 
 %Formazione di gap per dischi tipici sopra massa di saturno.
 %Viscous torque in keplerian disk: $T_{\nu}=3\pi r_0^2\Omega_0\Sigma\vu$.
 
-Il limite del regime lineare  \'e raggiunto quando il momento torcente dovuto al potenziale del pianeta \'e pari a quell odovuto alla viscosit\'a del disco:
+Il limite del regime lineare  \'e raggiunto quando il momento torcente dovuto al potenziale del pianeta \'e pari a quello dovuto alla viscosit\'a del disco:
 \begin{equation}
 \Gamma_g(\Delta)+\Gamma_{\nu}(r_p+\Delta)=0
 \end{equation}
@@ -993,9 +992,10 @@ Flow-through corotation torque: $\Gamma_{flow}=2\pi\Sigma_s\dot{a}_p\Omega_pa_p^
 &\dot{a}_p=\frac{2\Gamma^L}{\Omega_pa_p(m_p’-\delta m)}
 \end{align*}
 
-\section{Evoluzione elementi orbitali durante migrazione}
+%\section{Evoluzione elementi orbitali durante migrazione}
 
 \begin{workout}[Eccentricity and inclination evolution]
+Refs:armitage 17 ''lecturea''
 Planet-disk interactions: normal, tangential, radial forces. eccentricity and inclination evolution. (‘’Planet-disk interactions and orbital evolution’’)
 Decomposition of planet’s potential: non-circular orbit
 \begin{align*}
