--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -784,14 +784,14 @@ Inoltre le risonanze rimangono a distanza finita dal pianeta:
 \subsection{Momento torcente dovuto alle risonanze di Lindblad}
 Il momento torcente esercitato dal disco sul pianeta \'e
 \begin{equation}
-\Gamma_t=-\int_{disk}\Sigma(\vecp{r}{F})\,df=\int_{disk}\Sigma(\vec{r}\wedge\nabla\psi_p)\,df=\int_{disk}\Sigma\PDy{\phi}{\psi_p}\,df\label{eq:pd-torque}
+\Gamma_L^{int/est}=-\int_L^{int/est}\Sigma(\vecp{r}{F})\,df=\int_L^{int/est}\Sigma(\vec{r}\wedge\nabla\psi_p)\,df=\int_L^{int/est}\Sigma\PDy{\phi}{\psi_p}\,df\label{eq:pd-torque}
 \end{equation}
 $\Sigma$ densit\'a superficiale,  $\vec{F}$ forza per unit\'a di massa, $df$ elemento di superficie.
 %Linear. Occur if $R_H$ is smaller then H, disk scale heigth, and if viscous torque are dominant compared to gravitational torque.
 (Integrando l'equazione \eqref{eq:pd-torque} si ottiene) L'espressione del momento torcente esterno/interno
 \begin{equation}
 %\Gamma_m^L=\left.\sign{(\Omega-\Omega_p)}\frac{\pi^2\Sigma}{3\Omega\Omega_p}(r\TDy{r}{\psi_m}+\frac{2m^2(\Omega-\Omega_p)}{\Omega}\psi_m)^2\right|_{r=r_L}
-\Gamma_L\propto\sign{(r-r_p)}q^2\Sigma r^4\Omega^2(\frac{r}{H})^3
+\Gamma_L^{int/est}\propto\sign{(r-r_p)}q^2\Sigma r^4\Omega^2(\frac{r}{H})^3
 \end{equation}\label{eq:torqueimp}
 con $q=M_p/M_*$, infine una stima del momento torcente differenziale delle risonanze di Lindblad \'e fornito da \cite{tanaka2002three}:
 \begin{equation}
@@ -800,6 +800,8 @@ con $q=M_p/M_*$, infine una stima del momento torcente differenziale delle rison
 per disco isotermo infinitamente sottile.
 
 \subsection{Momento torcente dovuto alle risonanze di Corotazione}
+
+La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido.
 
 Il momento torcente dovuto alle risonanze di corotazione \'e
 \begin{equation}
@@ -905,8 +907,6 @@ t_{II}(yr)=\frac{1}{3\alpha}(\frac{a}{H})^2\Omega\expy{-1}=0.05/\alpha(a/H)^2(a/
 \end{equation}
 per $H/a\approx0.1$, $\alpha=\numrange{e-3}{e-2}$ a $a=1-5 au$ si ha $t_{}=10^3-10^4yr$.
 
-
-
 \begin{workout}[approx impulsiva e regime non lineare]
 (The interaction is frictional with interior speeding up protoplanet while exterior slowing down; viscous interaction with disk return mass element in circular orbit)
 Il calcolo esatto che tiene conto del fatto che siamo in SR rotante (LP93) introduce fattore correttivo $K_0=4/9[2K_0(2/3)*K_1(2/3)]^2$.
@@ -928,9 +928,9 @@ Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola;
 \end{workout}
 
 
-\section{Migrazione III: }
+\section{Migrazione tipo III}
 
-Esistono condizioni per cui il momento torcente generato nella zona di corotazione pu\'o diventare dominante.
+Esistono condizioni per cui il momento torcente generato nella zona di corotazione diventa dominante.
 
 \subsection{Momento torcente generato nella regione di corotazione}
 
@@ -943,8 +943,6 @@ Il momento torcente dovuto al flusso di materia causato dalla migrazione \'e
 \begin{equation}
 \Gamma_{III}=2\pi\Sigma_s\dot{a}_p\Omega_pa_p^3x_s
 \end{equation}
-
-La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido; utilizzando l'approssimazione impulsi nel regime di piccolo parametro d'impatto e bassa velocit\'a relativa si determina il valorelimite $x_s$ per cui se $x_s<b$ la particella di fluido compie un orbita a ferro di cavallo (\ref{fig:corotation}). Per pianeti di piccola massa $q<\num{e-4.5}$: $x_s\propto m_p^2$, mentre per pianeti massivi $q>\num{e-4}$: $x_s\propto R_H$.
 
 \begin{workout}[corotation torque from ''disk planet interction'']
 The torque excerted by all fluid elements is (Goldreich tremaine79, Ward 91,92)
