--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -649,13 +649,24 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Interazioni pianeta-disco: migrazione planetaria}
 }
 
-\begin{wrapfigure}[10]{l}{0.3\textwidth}
+\begin{wrapfigure}[15]{l}{0.3\textwidth}
 \includegraphics[trim={0cm 10cm 0 0},clip, width=0.3\textwidth]{corotation}\label{fig:corotation}
 \caption{Da \cite{armitage2007lecture}.}
 \end{wrapfigure}
 
-Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta e integrando sui parametri d'impatto ammissibili, oppure descrivendo in approssimazione lineare l'interazione tra onde di densit\'a e pianeta.
+Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta e integrando sui parametri d'impatto ammissibili, oppure descrivendo in approssimazione lineare l'interazione tra onde di densit\'a e pianeta. L'analisi lineare delle perturbazioni generate dal pianeta fornisce l'espressione analitica dei momenti torcenti esercitati dal disco sul pianeta alle risonanze di Lindblad e di corotazione.
 
+Per pianeti massicci la risposta del disco non \'e pi\'u lineare: il momento angolare viene assorbito in prossimit\'a delle risonanze di Lindblad e si crea un gap nel disco. Il passaggio a regimenon lineare nella regione di corotazione avviene su tempi minori del tempo-scala di librazione:
+\begin{align}
+\left.\begin{aligned}
+&\tau_{lib}\propto\frac{a_p}{\Omega_px_s}
+\end{aligned}
+\right. \quad\text{con}\quad\begin{aligned}
+&x_s\propto a_p\sqrt{\frac{q}{h}}\\
+&h=\frac{H}{a}\\
+&q=\frac{m_p}{M_*}
+\end{aligned}•
+\end{align}•
 \clearpage
 
 \begin{workout}[Migrazione: situazione complessa]
