--- a/main.tex
+++ b/main.tex
@@ -111,7 +111,7 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 \part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
 }
 
-Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
+Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella 2centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
 L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
 
 \input{CAdesc}
