--- a/usepkg.sty
+++ b/usepkg.sty
@@ -17,8 +17,10 @@
 %\usepackage[]{graphicx} 
 %\usepackage{subfig} 
 
+\usepackage{selectp}
+
 \usepackage[fleqn]{amsmath}
-\usepackage{amssymb}
+\usepackage{amssymb,amsfonts}
 \usepackage{calrsfs}
 \usepackage{upgreek}
 
@@ -84,5 +86,3 @@ decorations.markings
 \usepackage{wasysym}
 \usepackage{wrapfig}
 \usepackage{verbatim}
-
-\usepackage{selectp}
