--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -37,7 +37,7 @@ con $\dot{\Sigma}_w$ contributo della foto-evaporazione,  $\dot{\Sigma}_p$ contr
 \end{equation}
 in i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
 
-La distribuzione di massa e la distribuzione della stima delle et\'a \'e mostrata in \ref{fig:initdistro}: la massa \'e determinata misurando flusso di emissione termica della polvera la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana con $\mu=-1.38$ ($M_{disk}=0.042\msun{}$) e $\sigma=0.49$.
+La distribuzione di massa e la frazione di dischi protoplanetari per ammassi stellari di et\'a diversa \'e mostrata in \ref{fig:initdistro}: la massa \'e determinata misurando flusso di emissione termica della polvera la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana con $\mu=-1.38$ ($M_{disk}=0.042\msun{}$) e $\sigma=0.49$.
 
 Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$, e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, e calcolando  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ si determinano gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
 
@@ -166,7 +166,7 @@ La soluzione delle equazioni che descrivono l'accrescimento di massa dei protopi
 \begin{workout}[Diagramma $(a-M)$]
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth,keepaspectratio]{ma-synth}
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{ma-synth}
 \caption{Da \cite{mordasini2018planetary}. Simulazione popolazione planetaria di 504 sistemi Punti rossi: pianeti giganti con $M_e/M_c>1$; blu hanno accresciuto core oltre la iceline, verdi all'interno dell'iceline .}
 \end{figure}
 
@@ -175,13 +175,13 @@ La distribuzione della popolazione planetaria \'e mostrata in \ref{fig:MaLR-freq
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth,keepaspectratio]{track1}
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{track1}
 \caption{Da \cite{mordasini2018planetary}. Formazione di un sistema planetario nel diagramma $a-M$: alla scomparsa del disco protoplanetario si hanno 2 pianeti giganti, un nettuniano caldo e 3 pianeti terrestri. La scala di colore indica la composizione $\frac{M_e}{M_c}$.}\label{fig:track1}
 \end{subfigure}
 ~
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth,keepaspectratio]{envelopecoresynth}
+\includegraphics[trim={0cm 12cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{envelopecoresynth}
 \caption{Da \cite{mordasini2018planetary}. }
 \end{subfigure}
 \end{figure}
@@ -200,7 +200,7 @@ Popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che
 
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}\label{fig:MaLR-freq-synth}
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}\label{fig:MaLR-freq-synth}
 \caption{Da \cite{mordasini2018planetary}. }
 \end{figure}
 
@@ -226,14 +226,17 @@ Per confrontare una popolazione planetaria simulata con le osservazioni \'e oppo
 
 \begin{table}
 \begin{tabular}{|ccc|}
+\hline
 N&Giganti ($M>300\mearth{}$)&vicini ($P\leq100\si{\day}, R\geq\rearth{}$)\\
+\hline
 1&4.8&8.4\\
 2&7.4&12.8\\
 3&5.4&11.4\\
 4&0.4&10.0\\
 $\geq5$&0.0&11.4\\
 $\exv{S}$&18.0&54.0\\
-O&10-20&50-60
+O&10-20&50-60\\
+\hline
 \end{tabular}
 \caption{Percentuale di stelle con N pianeti del dato tipo nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}
 \end{table}
@@ -241,10 +244,10 @@ O&10-20&50-60
 Nettuno/Saturno in posizioni poco affollate
 
 
-\begin{figure}[!ht]\includegraphics[keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
+\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\end{figure}
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
 \caption{Da \cite{mordasini2018planetary}. }
 \end{figure}
 
